# opengl-2

./: .gitignore  CMakeLists.txt  glad.c  main.cpp
src/: shader.cpp  shader.h
